infra/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-asgmt-app
  labels:
    kubernetes.io/metadata.name: ms-asgmt-app
